--- a/ERICA/langs/ru.yaml
+++ b/ERICA/langs/ru.yaml
@@ -1,39 +1,39 @@
 # Language name in their native
-language: "English 🇺🇲"
+language: "русский 🇷🇺☦️"
 # name of people(s) who worked on this translation
-authors: "@dank_as_fuck"
+authors: "@Timesisnotwaiting"
 
 # languages
-curr_chat_lang: "Hey. Your current language is {}, select the one you want from the buttons below :)"
-set_chat_lang: "Great, {} it is from now on!"
+curr_chat_lang: "Привет. Ваш текущий язык: {}, выберите нужный с помощью кнопок ниже. :)"
+set_chat_lang: "Отлично, {} это отныне!"
 
 
 pm_start_text: |
-   Hi {},
+   Привет {},
    ───────────────────────
-   I am an group management bot with some fun extras ;)
+   Я бот для управления группами с некоторыми забавными дополнениями. ;)
    
-   I can do a variety of things, most common of em are:
-   - Restrict users with *ban permissions*.
-   - Greet users with media + text and buttons, with proper formatting.
-   - Restrict users who flood your chat using my *anti-flood* module.
-   - *Warn* users according to the options set and restrict em accordingly.
-   - Save notes and filters with proper formatting and reply markup.
-   - I can Play Music Too In Ur Groups
-   - I have many features Which u Like thats
-   - Try /setlang to Change The Bot language (Note Currently is English Supported)
+   Я могу делать разные вещи, самые распространенные из них:
+   - Ограничить пользователей с помощью *бан разрешений*.
+   - Приветствуйте пользователей медиа + текстом и кнопками с правильным форматированием.
+   - Ограничить пользователей, флудящих в вашем чате, с помощью моего модуля *антифлуд*.
+   - *Предупреждать* пользователей в соответствии с установленными параметрами и ограничивать их соответствующим образом.
+   - Сохраняйте заметки и фильтры с правильным форматированием и разметкой ответов.
+   - Я тоже могу играть музыку в группах Ur
+   - У меня много функций, которые тебе нравятся
+   - Попробуйте /setlang изменить язык бота (обратите внимание, что в настоящее время поддерживается английский язык)
    
-   Theres even more! this is just the tip of the iceberg. Do note I need
-   to be promoted with proper admin permissions to function properly. 
-   Else I won't be able to function as said.
+   Там даже больше! это только вершина айсберга. Обратите внимание, мне нужно
+   быть повышенным с соответствующими правами администратора для правильной работы.
+   Иначе я не смогу работать, как сказано.
    ───────────────────────
-   Click on help to learn more!
+   Нажмите на помощь, чтобы узнать больше!
 
    
-grp_start_text: "Hello, Zaid Is Alive"
+grp_start_text: "Привет, Зайд жив"
 
 pm_help_text: |
-   ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʙᴜᴛᴛᴏɴꜱ ᴛᴏ ᴄʜᴇᴄᴋ ᴅᴀᴛᴀɪʟꜱ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅꜱ ᴏꜰ ᴛʜᴇ ᴍᴏᴅᴜʟᴇꜱ.
+   Нажмите на кнопки, чтобы проверить данные и команды или использовать.
 
 add_bot_to_group_btn: "Add Me To Your Chat"
 support_chat_link_btn: "Support"
