--- a/ERICA/langs/tm.yaml
+++ b/ERICA/langs/tm.yaml
@@ -12,16 +12,15 @@ pm_start_text: |
    இது {},
    ───────────────────────
    நான் சில வேடிக்கையான கூடுதல் அம்சங்களைக் கொண்ட குழு மேலாண்மை படகு ;)
-   
-   .
+   -நான் ஒரு மேலாண்மை பாட் மட்டுமல்ல, என்னிடம் பல செருகுநிரல்கள் உள்ளன
    ───────────────────────
-   ਹੋਰ ਜਾਣਨ ਲਈ ਮਦਦ 'ਤੇ ਕਲਿੱਕ ਕਰੋ!
+   Zaid உடன் மகிழுங்கள்!
 
    
-grp_start_text: "ਹੈਲੋ, ਜ਼ੈਦ ਜਾਗਰੂਕ ਹੈ"
+grp_start_text: "வணக்கம், ஜைத் விழித்திருக்கிறான்"
 
 pm_help_text: |
-   ਖਾਸ ਬਾਰੇ ਵੇਰਵੇ ਪ੍ਰਾਪਤ ਕਰਨ ਲਈ ਬਟਨਾਂ 'ਤੇ ਕਲਿੱਕ ਕਰੋ.
+   சிறப்பு பற்றிய விவரங்களைப் பெற பட்டன்களைக் கிளிக் செய்யவும்.
 
 add_bot_to_group_btn: "Add Me To Your Chat"
 support_chat_link_btn: "Support"
