--- a/ERICA/langs/bn.yaml
+++ b/ERICA/langs/bn.yaml
@@ -23,9 +23,6 @@ pm_start_text: |
    - আমার অনেক বৈশিষ্ট্য আছে যা আপনি পছন্দ করেন
    - বট ভাষা পরিবর্তন করতে /setlang চেষ্টা করুন (দ্রষ্টব্য ইংরেজি বর্তমানে সমর্থিত)
    
-   আরো আছে! এটি হিমশৈলের টিপ মাত্র। আমার প্রয়োজন নোট করুন
-   সঠিকভাবে কাজ করার জন্য যথাযথ প্রশাসকের অনুমতি নিয়ে পদোন্নতি করতে হবে।
-   অন্যথায় আমি যেমন বলা হয়েছে তেমন কাজ করতে পারব না.
    ───────────────────────
    আরো জানতে সাহায্য ক্লিক করুন!
 
@@ -33,14 +30,15 @@ pm_start_text: |
 grp_start_text: "হ্যালো, জায়েদ জেগে আছে"
 
 pm_help_text: |
-   इन मॉड्यूल के विवरण और कमांड की जांच करने के लिए बटन पर क्लिक करें.
+   এই মডিউলগুলির বিশদ এবং কমান্ড চেক করতে বোতামে ক্লিক করুন.
 
-add_bot_to_group_btn: "Add Me To Your Chat"
-support_chat_link_btn: "Support"
-updates_channel_link_btn: "Updates"
-devs_btn: "Devlopers ✅"
+add_bot_to_group_btn: "আমাকে আপনার চ্যাটে যোগ করুন ➕"
+support_chat_link_btn: "সমর্থন 🎉"
+updates_channel_link_btn: "আপডেট 📢"
+devs_btn: "Devlopers "
+web_btn: "ওয়েবসাইট ✅"
 chat_btn: "Donate 💰"
-helper_btn: "Help And Commands"
+helper_btn: "নির্দেশাবলী এবং আদেশ 🧰"
 
 admin_help: |
    • `/admins`*:* list of admins in the chat
