--- a/ERICA/langs/in.yaml
+++ b/ERICA/langs/in.yaml
@@ -35,12 +35,13 @@ grp_start_text: "Halo, Zaid Sudah Bangun"
 pm_help_text: |
    Klik Tombol untuk Memeriksa Datail dan Perintah Modul Ini.
 
-add_bot_to_group_btn: "Add Me To Your Chat"
-support_chat_link_btn: "Support"
-updates_channel_link_btn: "Updates"
-devs_btn: "Devlopers ✅"
+add_bot_to_group_btn: "tambahkan saya ke obrolan Anda ➕"
+support_chat_link_btn: "Membantu 🎉"
+updates_channel_link_btn: "Pembaruan 📢"
+devs_btn: "Devlopers "
+web_btn: "Situs web ✅"
 chat_btn: "Donate 💰"
-helper_btn: "Help And Commands"
+helper_btn: "instruksi dan perintah 🧰"
 
 admin_help: |
    • `/admins`*:* list of admins in the chat
