--- a/ERICA/langs/ku.yaml
+++ b/ERICA/langs/ku.yaml
@@ -35,12 +35,13 @@ grp_start_text: "유자이드가 살아있다 🌝"
 pm_help_text: |
    버튼을 클릭하여 데이터 및 명령을 확인하거나 사용.
 
-add_bot_to_group_btn: "Add Me To Your Chat"
-support_chat_link_btn: "Support"
-updates_channel_link_btn: "Updates"
-devs_btn: "Devlopers ✅"
+add_bot_to_group_btn: "채팅에 나를 추가하세요. ➕"
+support_chat_link_btn: "도움말 🎉"
+updates_channel_link_btn: "업데이트 📢"
+devs_btn: "Devlopers "
+web_btn: "웹사이트 ✅"
 chat_btn: "Donate 💰"
-helper_btn: "Help And Commands"
+helper_btn: "지침 및 주문 🧰"
 
 admin_help: |
    • `/admins`*:* list of admins in the chat
