--- a/ERICA/langs/pn.yaml
+++ b/ERICA/langs/pn.yaml
@@ -35,12 +35,13 @@ grp_start_text: "ਹੈਲੋ, ਜ਼ੈਦ ਜਾਗਰੂਕ ਹੈ"
 pm_help_text: |
    ਖਾਸ ਬਾਰੇ ਵੇਰਵੇ ਪ੍ਰਾਪਤ ਕਰਨ ਲਈ ਬਟਨਾਂ 'ਤੇ ਕਲਿੱਕ ਕਰੋ.
 
-add_bot_to_group_btn: "Add Me To Your Chat"
-support_chat_link_btn: "Support"
-updates_channel_link_btn: "Updates"
-devs_btn: "Devlopers ✅"
+add_bot_to_group_btn: "ਮੈਨੂੰ ਚੈਟ ਵਿੱਚ ਸ਼ਾਮਲ ਕਰੋ। ➕"
+support_chat_link_btn: "ਮਦਦ ਕਰੋ 🎉"
+updates_channel_link_btn: "ਅੱਪਡੇਟ 📢"
+devs_btn: "Devlopers "
+web_btn: "ਵੈੱਬਸਾਈਟ ✅"
 chat_btn: "Donate 💰"
-helper_btn: "Help And Commands"
+helper_btn: "ਹਦਾਇਤਾਂ ਅਤੇ ਆਦੇਸ਼ 🧰"
 
 admin_help: |
    • `/admins`*:* list of admins in the chat
