--- a/ERICA/langs/ru.yaml
+++ b/ERICA/langs/ru.yaml
@@ -35,12 +35,13 @@ grp_start_text: "Привет, Зайд жив"
 pm_help_text: |
    Нажмите на кнопки, чтобы проверить данные и команды или использовать.
 
-add_bot_to_group_btn: "Add Me To Your Chat"
-support_chat_link_btn: "Support"
-updates_channel_link_btn: "Updates"
-devs_btn: "Devlopers ✅"
+add_bot_to_group_btn: "добавь меня в свой чат ➕"
+support_chat_link_btn: "Помощь 🎉"
+updates_channel_link_btn: "Обновления 📢"
+devs_btn: "Devlopers "
+web_btn: "Веб-сайт ✅"
 chat_btn: "Donate 💰"
-helper_btn: "Help And Commands"
+helper_btn: "инструкции и приказы 🧰"
 
 admin_help: |
    • `/admins`*:* list of admins in the chat
