--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -549,3 +549,6 @@ group_help: |
          ❂ /users: list all the users in the chat
          ❂ /zombies: counts the number of deleted account in your group
          ❂ /kickthefools: kicks all members inactive from 1 week
+
+
+sg_search_text: Finding users history
