--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -551,4 +551,4 @@ group_help: |
          ❂ /kickthefools: kicks all members inactive from 1 week
 
 
-sg_search_text: Finding users history
+sg_search_text: "Finding users history"
