--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -551,8 +551,7 @@ group_help: |
          ❂ /kickthefools: kicks all members inactive from 1 week
 
 
-sg_search_text: "Finding users history"
-sg_give_text: "getting history"
-sg_replyusers_text: "Reply to a user"
-sg_getting_text: "Finding Name History"
+alive_help: |
+       Send Ur Feedback with Us ☺️
+         ❂ `/feedback`: (message) This Command Will Send ur Feedback To Our Support Group
 
