--- a/ERICA/langs/hi.yaml
+++ b/ERICA/langs/hi.yaml
@@ -551,7 +551,8 @@ group_help: |
          ❂ /kickthefools: kicks all members inactive from 1 week
 
 
-sg_search_text: "उपयोगकर्ता इतिहास ढूँढना"
-sg_give_text: "इतिहास प्राप्त करना"
-sg_replyusers_text: "एक उपयोगकर्ता को उत्तर दें"
-sg_getting_text: "नाम इतिहास ढूँढना"
+alive_help: |
+       Send Ur Feedback with Us ☺️
+         ❂ /report: (message) send ur issues which u r facing in Zaid
+         ❂ /feedback: (message) Send ur feedback
+         ❂ /hammer: (message) This will Send to my owner (Privately Issues/Feedback Only).
