--- a/ERICA/langs/bn.yaml
+++ b/ERICA/langs/bn.yaml
@@ -548,7 +548,7 @@ group_help: |
          ❂ /kickthefools: kicks all members inactive from 1 week
 
 
-alive_help: |
+feed_help: |
        Send Ur Feedback with Us ☺️
          ❂ /report: (message) send ur issues which u r facing in Zaid
          ❂ /feedback: (message) Send ur feedback
