--- a/ERICA/langs/ru.yaml
+++ b/ERICA/langs/ru.yaml
@@ -553,8 +553,8 @@ group_help: |
 
 
 feed_help: |
-       Send Ur Feedback with Us ☺️
-         ❂ /feedback: (message) Send ur feedback
+       Send Your Valuable Feedback With Us 💖
+         ❂ /feedback: (message) Send ur feedback ex: /feedback Is There Something error @username
          ❂ /hammer: (message) This will Send to my owner (Privately Issues/Feedback Only).
 alert_help: |
        Too many mentions.. Cant you manage them all alone..
@@ -567,3 +567,19 @@ alert_help: |
        **Example:**
        If you are mentioned in a group Zaid will tell you who mentioned you, 
        message that you are tagged in and which group is that.
+
+
+raid_help: |
+  Ever had your group raided by spammers or bots?
+  This module allows you to quickly stop the raiders
+  By enabling *raid mode* I will automatically kick every user that tries to join
+  When the raid is done you can toggle back lockgroup and everything will be back to normal.
+  
+   *Admins only!* 
+  • /raid `(off/time optional)` : toggle the raid mode (on/off)
+  if no time is given it will default to 2 hours then turn off automatically
+  By enabling *raid mode* I will kick every user on joining the group.
+  • /raidtime `(time optional)` : view or set the default duration for raid mode, after that time from toggling the raid mode will turn off automatically
+  Default is 6 hours
+  • /raidactiontime `(time optional)` : view or set the default duration that the raid mode will tempban
+  Default is 1 hour
