--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -613,3 +613,8 @@ bug_help: |
   This Plugin Specially Designed For You.
     • /bug: Your Message else Leave blank
 
+quote_help: |
+  Make messages to Stickers
+    •/q - To quote a message.
+    •/q [INTEGER] - To quote more than 1 messages.
+    •/q r - to quote a message with it's reply
