--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -615,6 +615,16 @@ bug_help: |
 
 quote_help: |
   Make messages to Stickers
-    •/q - To quote a message.
-    •/q [INTEGER] - To quote more than 1 messages.
-    •/q r - to quote a message with it's reply
+    • /q - To quote a message.
+    • /q [INTEGER] - To quote more than 1 messages.
+    • /q r - to quote a message with it's reply
+
+sticker_help: |
+   Help Menu For Stickers Tools
+    • /stickerid - reply to a sticker to me to tell you its file ID.
+    • /getsticker - reply to a sticker to me to upload its raw PNG file.
+    • /kang and /steal - reply to a sticker to add it to your pack.
+sticker_help: |
+   Help Menu For Mention all Tools
+    • /tagall : Reply To a Message
+
