--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -614,7 +614,7 @@ bug_help: |
     • /bug: Your Message else Leave blank
 
 quote_help: |
-  Make messages to Stickers
+  Make messages to Stickers (Now support Animations Also)
     • /q - To quote a message.
     • /q [INTEGER] - To quote more than 1 messages.
     • /q r - to quote a message with it's reply
