--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "English 🇺🇲"
+language: "English (🇺🇲)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
