--- a/ERICA/langs/bn.yaml
+++ b/ERICA/langs/bn.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "বাংলা 🇮🇳"
+language: "বাংলা (🇮🇳)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
