--- a/ERICA/langs/ar.yaml
+++ b/ERICA/langs/ar.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "عربى 🇦🇪"
+language: "عربى (🇦🇪)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
