--- a/ERICA/langs/fr.yaml
+++ b/ERICA/langs/fr.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "français 🇫🇷"
+language: "français (🇫🇷)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
