--- a/ERICA/langs/hi.yaml
+++ b/ERICA/langs/hi.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "हिन्दी 🇮🇳"
+language: "हिन्दी (🇮🇳)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
