--- a/ERICA/langs/in.yaml
+++ b/ERICA/langs/in.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "Indonesian 🇮🇩"
+language: "Indonesian (🇮🇩)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
