--- a/ERICA/langs/jp.yaml
+++ b/ERICA/langs/jp.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "日本 🇯🇵"
+language: "日本 (🇯🇵)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
