--- a/ERICA/langs/ku.yaml
+++ b/ERICA/langs/ku.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "한국인(BTS) 🇰🇵"
+language: "한국인 (🇰🇵)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
