--- a/ERICA/langs/pn.yaml
+++ b/ERICA/langs/pn.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "ਪੰਜਾਬੀ 🇮🇳"
+language: "ਪੰਜਾਬੀ (🇮🇳)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
