--- a/ERICA/langs/ru.yaml
+++ b/ERICA/langs/ru.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "русский 🇷🇺☦️"
+language: "русский (🇷🇺)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
