--- a/ERICA/langs/si.yaml
+++ b/ERICA/langs/si.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "සිංහල 🇱🇰"
+language: "සිංහල (🇱🇰)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
