--- a/ERICA/langs/sp.yaml
+++ b/ERICA/langs/sp.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "castellano 🇪🇸"
+language: "castellano (🇪🇸)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
