--- a/ERICA/langs/tm.yaml
+++ b/ERICA/langs/tm.yaml
@@ -1,5 +1,5 @@
 # Language name in their native
-language: "தமிழ் 🇮🇳"
+language: "தமிழ் (🇮🇳)"
 # name of people(s) who worked on this translation
 authors: "@Timesisnotwaiting"
 
