--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -42,6 +42,29 @@ chlang_btn: "ʟᴀɴɢᴜᴀɢᴇ 🌏"
 web_btn: "ᴡᴇʙꜱɪᴛᴇ ✅"
 chat_btn: "Donate 💰"
 helper_btn: "ᴄᴏᴍᴍᴀɴᴅꜱ 🧰"
+donation_btn:
+
+donation_text: |
+   *Are you interested in helping my creator with his efforts to keep me in active development? If yes, You're in the right place.* 
+
+   We emphasise the importance of needing funds to keep Natalie under active development. Your donations in any amount of money to Natalie's servers and other utilities will allow us to sustain the lifespan in the long term. We will use all of the donations to cover future expenses and upgrades of the servers costs. If you've got spare money to help us in this effort, Kindly do so and your donations can also motivate us keep bring on new features.
+
+   *You can help the development with donations via Paypal or Cryptocurrencies on following details*,
+   
+   *PayPal*:
+   [Click](https://www.paypal.me/ashish1936)
+
+   *Razorpay*:
+   [Click](http://pages.razorpay.com/GODFATHERDONATIONS)
+
+   *DOGE*:
+   `DAVFoyhh2bYj88A8622nEGUpnJmruFmK9A`
+
+   *BITCOIN*:
+   `bc1q2jfgvczeye5e6kduvfayhwj6lkwkcjr4u70v34`
+   
+   *USDT TRC20*:
+   `TMYbYRZzKi83xHrGP97hXjwPuWL8pkJ81x`
 
 pm_basic_text: |
    Base Commands
