--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -42,7 +42,7 @@ chlang_btn: "ʟᴀɴɢᴜᴀɢᴇ 🌏"
 web_btn: "ᴡᴇʙꜱɪᴛᴇ ✅"
 chat_btn: "Donate 💰"
 helper_btn: "ᴄᴏᴍᴍᴀɴᴅꜱ 🧰"
-donation_btn:
+donation_btn: "Dᴏɴᴀᴛɪᴏɴ "
 
 donation_text: |
    *Are you interested in helping my creator with his efforts to keep me in active development? If yes, You're in the right place.* 
