--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -38,11 +38,11 @@ pm_help_text: |
 add_bot_to_group_btn: "ᴀᴅᴅ ᴍᴇ ᴛᴏ ᴜʀ ᴄʜᴀᴛꜱ ➕"
 support_chat_link_btn: "ꜱᴜᴘᴘᴏʀᴛ 🎉"
 updates_channel_link_btn: "ᴜᴘᴅᴀᴛᴇꜱ 📢"
-chlang_btn: "ʟᴀɴɢᴜᴀɢᴇ 🌏"
+chlang_btn: "ʟᴀɴɢᴜᴀɢᴇ 🌎"
 web_btn: "ᴡᴇʙꜱɪᴛᴇ ✅"
 chat_btn: "Donate 💰"
 helper_btn: "ᴄᴏᴍᴍᴀɴᴅꜱ 🧰"
-donation_btn: "Dᴏɴᴀᴛɪᴏɴ "
+donation_btn: "Dᴏɴᴀᴛɪᴏɴ ₹"
 
 donation_text: |
    *Are you interested in helping my creator with his efforts to keep me in active development? If yes, You're in the right place.* 
