--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -35,13 +35,13 @@ grp_start_text: "ʜᴇʟʟᴏ, ᴢᴀɪᴅ ɪꜱ ᴀʟɪᴠᴇ"
 pm_help_text: |
    ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʙᴜᴛᴛᴏɴꜱ ᴛᴏ ᴄʜᴇᴄᴋ ᴅᴀᴛᴀɪʟꜱ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅꜱ ᴏꜰ ᴛʜᴇ ᴍᴏᴅᴜʟᴇꜱ.
 
-add_bot_to_group_btn: "ᴀᴅᴅ ᴍᴇ ᴛᴏ ᴜʀ ᴄʜᴀᴛꜱ ➕"
-support_chat_link_btn: "ꜱᴜᴘᴘᴏʀᴛ 🎉"
-updates_channel_link_btn: "ᴜᴘᴅᴀᴛᴇꜱ 📢"
-chlang_btn: "ʟᴀɴɢᴜᴀɢᴇ 🌎"
+add_bot_to_group_btn: "ᴀᴅᴅ ᴍᴇ ᴛᴏ ᴜʀ ᴄʜᴀᴛꜱ ᯽"
+support_chat_link_btn: "ꜱᴜᴘᴘᴏʀᴛ ⍟"
+updates_channel_link_btn: "ᴜᴘᴅᴀᴛᴇꜱ ☢"
+chlang_btn: "ʟᴀɴɢᴜᴀɢᴇ ♻"
 web_btn: "ᴡᴇʙꜱɪᴛᴇ ✅"
 chat_btn: "Donate 💰"
-helper_btn: "ᴄᴏᴍᴍᴀɴᴅꜱ 🧰"
+helper_btn: "ᴄᴏᴍᴍᴀɴᴅꜱ ⌨"
 donation_btn: "Dᴏɴᴀᴛɪᴏɴ ₹"
 
 donation_text: |
