--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -57,14 +57,17 @@ donation_text: |
    *Razorpay*:
    [Click](http://pages.razorpay.com/GODFATHERDONATIONS)
 
+   *Coinbase Send any Crypto*:
+   `unknown58965@gmail.com`
+
    *DOGE*:
-   `DAVFoyhh2bYj88A8622nEGUpnJmruFmK9A`
+   `DCdNHWspMKMS6XtyDMZRiaMj4LPYkfY8Ge`
 
    *BITCOIN*:
-   `bc1q2jfgvczeye5e6kduvfayhwj6lkwkcjr4u70v34`
+   `35Qt85xJB66F26iXwYWFtqbPahX2412Tja`
    
    *USDT TRC20*:
-   `TMYbYRZzKi83xHrGP97hXjwPuWL8pkJ81x`
+   `TKgmkiDk9HVUGrgGf1kZoCS6GfE5HRY9HQ`
 
 pm_basic_text: |
    Base Commands
