--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -1,3 +1,4 @@
+
 # Language name in their native
 language: "English (🇺🇲)"
 # name of people(s) who worked on this translation
@@ -29,7 +30,7 @@ pm_start_text: |
    ───────────────────────
    ᴄʟɪᴄᴋ ᴏɴ ʜᴇʟᴘ ᴛᴏ ʟᴇᴀʀɴ ᴍᴏʀᴇ!
    
-grp_start_text: "ʜᴇʟʟᴏ, ᴢᴀɪᴅ ɪꜱ ᴀʟɪᴠᴇ"
+grp_start_text: "ʜᴇʟʟᴏ, ɪɴɴᴇxɪᴀ ɪꜱ ᴀʟɪᴠᴇ"
 
 pm_help_text: |
    ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʙᴜᴛᴛᴏɴꜱ ᴛᴏ ᴄʜᴇᴄᴋ ᴅᴀᴛᴀɪʟꜱ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅꜱ ᴏꜰ ᴛʜᴇ ᴍᴏᴅᴜʟᴇꜱ.
