--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -49,18 +49,11 @@ donation_text: |
    *You can help the development with donations via Paypal or Cryptocurrencies on following details*,
    
    *PayPal*:
-   [Click](https://www.paypal.me/ashish1936)
+   [Click](https://www.paypal.me/piroxpower)
    *Razorpay*:
    [Click](http://pages.razorpay.com/GODFATHERDONATIONS)
    *Coinbase Send any Crypto*:
-   `unknown58965@gmail.com`
-   *DOGE*:
-   `DCdNHWspMKMS6XtyDMZRiaMj4LPYkfY8Ge`
-   *BITCOIN*:
-   `35Qt85xJB66F26iXwYWFtqbPahX2412Tja`
-   
-   *USDT TRC20*:
-   `TKgmkiDk9HVUGrgGf1kZoCS6GfE5HRY9HQ`
+   `anmoltiwary32@gmail.com`
 pm_basic_text: |
    Base Commands
  
