--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -23,7 +23,9 @@ pm_start_text: |
 grp_start_text: "ʜᴇʟʟᴏ, ɪɴɴᴇxɪᴀ ɪꜱ ᴀʟɪᴠᴇ"
 
 pm_help_text: |
-   ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʙᴜᴛᴛᴏɴꜱ ᴛᴏ ᴄʜᴇᴄᴋ ᴅᴀᴛᴀɪʟꜱ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅꜱ ᴏꜰ ᴛʜᴇ ᴍᴏᴅᴜʟᴇꜱ.
+   *» Patricia Exᴄʟᴜsɪᴠᴇ Fᴇᴀᴛᴜʀᴇs*
+   
+    ‣ :Aᴠᴀɪʟᴀʙʟᴇ Cᴏᴍᴍᴀɴᴅꜱ Sᴇᴄᴛɪᴏɴ. @SrkBots
 add_bot_to_group_btn: "➕ Add me to a Group ➕"
 support_chat_link_btn: "👥 Group"
 updates_channel_link_btn: "Channel 📢"
