--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -24,8 +24,7 @@ grp_start_text: "ʜᴇʟʟᴏ, ɪɴɴᴇxɪᴀ ɪꜱ ᴀʟɪᴠᴇ"
 
 pm_help_text: |
    *» Patricia Exᴄʟᴜsɪᴠᴇ Fᴇᴀᴛᴜʀᴇs*
-   
-    ‣ :Aᴠᴀɪʟᴀʙʟᴇ Cᴏᴍᴍᴀɴᴅꜱ Sᴇᴄᴛɪᴏɴ. @SrkBots
+   Hey Welcome to My Help if you seem lost or have a doubt use the buttons below to navigate through it
 add_bot_to_group_btn: "➕ Add me to a Group ➕"
 support_chat_link_btn: "👥 Group"
 updates_channel_link_btn: "Channel 📢"
