--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -20,7 +20,7 @@ pm_start_text: |
    Press /help to see *all the commands* and how they work!
    📃 Privacy policy
    
-grp_start_text: "*Heya :)* PM me if you have any questions on how to use me!"
+grp_start_text: "Heya :) PM me if you have any questions on how to use me!"
 
 pm_help_text: |
    *» Patricia Exᴄʟᴜsɪᴠᴇ Fᴇᴀᴛᴜʀᴇs*
